added to html questions and which answer

--- a/index.html
+++ b/index.html
@@ -3,29 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Coding Quiz Game</title>
 </head>
 <body>
     <h1>Do you know your Code?</h1>
+<button>Start</button>
+<div id="timer">60</div>
+<div id="hide questions"></div>
     <h2>Question 1:</h2>
-        <p>What is a HTML?</p>
+        <p>What is the definition HTML?</p>
+            <ul>
+                <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
+                <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
+                <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
+                <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
+            </ul>
 
-
-        <h2>Question 1:</h2>
-        <p>What is a HTML?</p>
-
-
-        <h2>Question 2:</h2>
+    <h2>Question 2:</h2>
         <p>What is a CSS?</p>
+        <ul>
+            <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
+            <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
+            <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
+            <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
+        </ul>
 
-
-        <h2>Question 3:</h2>
+    <h2>Question 3:</h2>
         <p>Which answer is the required tags in HTML?</p>
+        <ul>
+            <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
+            <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
+            <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
+            <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
+        </ul>
 
-
-        <h2>Question 4:</h2>
+    <h2>Question 4:</h2>
         <p>What sign is an ID in CSS?</p>
+        <ul>
+            <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
+            <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
+            <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
+            <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
+        </ul>
+
+
+
+
+
+
 
     <script src="./script.js"></script>
 </body>
