Hid start page and has timer go down

--- a/index.html
+++ b/index.html
@@ -3,48 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Coding Quiz Game</title>
 </head>
 <body>
-    <h1>Do you know your Code?</h1>
-<button>Start</button>
-<div id="timer">60</div>
-<div id="hide questions"></div>
-    <h2>Question 1:</h2>
-        <p>What is the definition HTML?</p>
-            <ul>
-                <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
-                <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
-                <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
-                <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
-            </ul>
+    <div id="timer"></div>
+    <!-- welcome section -->
+    <div id="welcomePage">
+        <h1>Do you know your Code?</h1>
 
-    <h2>Question 2:</h2>
-        <p>What is a CSS?</p>
+        <button id="startButton">Start</button>
+    </div>
+    <!-- quiz section -->
+    <div id="quizPage" class="hide">
+        <h2 >What colour is the ocean?</h2>
+        <p></p>
         <ul>
-            <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
-            <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
-            <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
-            <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
+            <li>Red</li>
+            <li>Blue</li>
         </ul>
+    </div>
 
-    <h2>Question 3:</h2>
-        <p>Which answer is the required tags in HTML?</p>
-        <ul>
-            <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
-            <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
-            <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
-            <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
-        </ul>
-
-    <h2>Question 4:</h2>
-        <p>What sign is an ID in CSS?</p>
-        <ul>
-            <li onclick="checkAnswer(this)">Hypertext Markup Language</li>
-            <li onclick="checkAnswer(this)">Homepage Time Mini Line</li>
-            <li onclick="checkAnswer(this)">It Does Not Mean Anything</li>
-            <li onclick="checkAnswer(this)">Haliey Thomas Mia Liam</li>
-        </ul>
 
 
 
