Added more questions and undid css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <li data-correct="true">Hypertext Markup Language</li>
                 <li>Hyperlink and Text Markup Language</li>
                 <li>Highly Textured Markup Language</li>
-                <li>Hypertext Transfer Markup Language</li>
             </ul>
         </div>
 
@@ -32,7 +31,6 @@
                 <li>Cascading Style Sheet</li>
                 <li data-correct="true">Cascading Style Syntax</li>
                 <li>Creative Style Sheet</li>
-                <li>Cool Style Syntax</li>
             </ul>
         </div>
 
@@ -43,10 +41,33 @@
                 <li data-correct="true">A programming language</li>
                 <li>A style sheet language</li>
                 <li>A markup language</li>
-                <li>An animation language</li>
             </ul>
         </div>
     </div>
+
+    <div class="question">
+        <h2>What is a unordered list format?</h2>
+        <ul>
+            <li>displays elements in a numbered format</li>
+            <li data-correct="true">Displays elements in a bulleted format</li>
+            <li>It breaks the current line and shifts the flow of the text to a new line.</li>
+
+        </ul>
+    </div>
+</div>
+
+
+<div class="question">
+    <h2>How do you create a hyperlink in HTML?</h2>
+    <ul>
+        <li>You can not</li>
+        <li data-correct="true">the anchor tag</li>
+        <li>The link tag</li>
+
+    </ul>
+</div>
+</div>
+
 
     <script src="./script.js"></script>
 </body>
